# fair-manufacturing-service-recommendation

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  skills-lock.json
.claude/skills/deep-research/: SKILL.md
.claude/skills/fact-check/: SKILL.md
.claude/skills/research-coordinator/: SKILL.md
configs/: default.yaml
data/: download.py
docs/: integration_plan.md
experiments/: 01_data_exploration.py  02_baseline_comparison.py  03_fair_reranking.py  04_ablation_study.py  05_domain_analysis.py  run_all.py
notebooks/: exploration.ipynb
paper/: main.tex  references.bib
results/eda/dataco/: summary_stats.csv
results/eda/mskg/: summary_stats.csv
src/data/: loader.py  mskg_processor.py  supply_chain_processor.py
src/evaluation/: ranking_metrics.py  statistical_tests.py
src/fairness/: domain_metrics.py  groups.py  metrics.py
src/models/: baselines.py  collaborative.py  fair_reranking.py  gnn_advanced.py  graph_based.py  llm_recommender.py
src/utils/: config.py  seed.py
tests/: test_metrics.py  test_new_models.py
